# xFASTA

./: .gitignore  CONTRIBUTING.md  README.md  fasta_fun.py  gap_fun.py  genome_fun.py  gff_fun.py  pyproject.toml  pysam_test.py  reads_fun.py  telomere_fun.py  util.py  xFASTA  xFASTA.py
tests/: test_cli.py  test_fasta_fun.py  test_gap_fun.py  test_genome_fun.py  test_gff_fun.py  test_reads_fun.py  test_telomere_fun.py  test_util.py
