[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xfasta"
version = "1.0.1"
description = "Small command-line utilities for FASTA, FASTQ, GFF, and genome workflows."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "biopython>=1.80",
    "pandas>=1.5",
    "pysam>=0.21",
    "scipy>=1.9",
]

[project.scripts]
xfasta = "xFASTA:main"

[tool.setuptools]
py-modules = [
    "xFASTA",
    "fasta_fun",
    "gap_fun",
    "genome_fun",
    "gff_fun",
    "reads_fun",
    "telomere_fun",
    "util",
]
